fixed home pag emain image getting squashed during resizing. Now crops right if no room

--- a/styles/home.css
+++ b/styles/home.css
@@ -6,6 +6,11 @@
   width: 100%;
 }
 
+.content-box.split-box {
+  /* prevent right padding */
+ padding: 15px 0px 15px 15px;
+}
+
 .content-box .text-box {
   background: linear-gradient(to right, rgb(232, 0, 233, 0.12), rgb(37, 3, 192, 0.12)); /* same as #e800e9, #2503c0 */
   min-height: 100%;
@@ -18,6 +23,9 @@
   padding: 15px;
   hyphens: auto;
   text-align: justify;
+  /* the text box will never shrink below 48% */
+  flex-shrink: 0;
+  flex-basis: 45%;
 }
 
 .content-box .text-box a {
@@ -50,6 +58,19 @@
 
 .content-box .responsive-spacer-15 {
   width: 23px;
+  flex-shrink: 0;
+  flex-basis: 23px;
+}
+
+.home-image-wrapper {
+  overflow: hidden  ;
+}
+
+.home-image {
+  /* width: 100%;
+  height: auto; */
+  height: 100%;
+  /* flex-shrink: 1; */
 }
 
 .arrow {
